# KINGDOM-GAME

./: .cursorrules  .env.example  .gitignore  index.html  package-lock.json  package.json
.qoder/plans/: ログのフル構造化_a2f76a5d.md  大規模リファクタリング_2ba18e6e.md
data/: state.json
docs/: ARCHITECTURE.md  CODING-RULES.md  DATABASE.md  KC_SPEC.md  REDIS.md  SETUP-RUST.md  UI.md
server/: Cargo.toml  README.md
server/.cargo/: config.toml
server/migrations/: 001_initial.sql  002_sqlite_normalized.sql  003_event_logs.sql
server/src/: ai_actions.rs  ai_kingdom_scheduler.rs  app_state.rs  auth.rs  cards.rs  config.rs  dev_bot.rs  facilities.rs  game_log.rs  http_api.rs  items.rs  main.rs  march_scheduler.rs  model.rs  model_actions.rs  model_ruins.rs  paths.rs  persistence.rs  pve_world.rs  realtime.rs  ruin_scheduler.rs  ruins.rs  server_mode.rs  skills.rs  world_manager.rs  world_scheduler.rs
server/src/ai_actions/: combat.rs  exploration.rs  formation.rs  mod.rs
server/src/db/: auth_repo.rs  mod.rs  player_repo.rs  world_repo.rs
server/src/model/: action.rs  card_stats.rs  game_event.rs  mod.rs  player.rs  progression.rs  state.rs  territory.rs  travel.rs  types.rs  world.rs
server/src/model_actions/: alliance.rs  card_stats.rs  cards.rs  combat.rs  exploration.rs  facility.rs  formation.rs  march.rs  market.rs  mod.rs
server/src/model_actions/combat/: bonus.rs  damage.rs  mod.rs  resolve.rs
server/src/model_actions/march/: dispatch.rs  mod.rs
server/src/skills/: catalog.rs  combat_character.rs  engine.rs  mod.rs  types.rs
src/: app-bootstrap.ts  app-dom.ts  app-render.ts  config.ts  context-menu-view.ts  formation-card-detail.ts  home-map-view.ts  home-screen-build.ts  home-screen-panel.ts  main.ts  map-isometric.ts  map-view.ts  store-actions.ts  store.ts  style.css  unit-select-view.ts  utils.ts
src/game/: characters.ts  combat.ts  effective-stats.ts  facilities.ts  facility-selectors.ts  facility-visuals.ts  formation.ts  formed-units-persist.ts  items.ts  march-overlays.ts  river-orientation.ts  ruin-enemies.ts  skills.ts  territories.ts  travel.ts
(+48 files in other folders)
